Fixed img spacing and header on each page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,11 +69,11 @@ footer h5 {
 }
 
 .container {
-    width: 896px;
+    width: 898px;
     margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 115px;
+    margin-bottom: 80px;
     padding: 0px 30px;
     border: solid 2px #dddddd;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -82,7 +82,7 @@ footer h5 {
     background-color: #ffffff;
 }
 
-#aboutMeHeader {
+.heading {
     height: 70px;
     color: #4aaaa5;
     border-bottom: solid 2px #cccccc;
@@ -98,15 +98,35 @@ footer h5 {
 
 .img-container {
     display: block;
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
+    margin: 40px 45px 0px 45px;
     float: left;
+    text-align: center;
+}
+
+.img-container a {
+    text-decoration: none;
 }
 
 .img-container img {
     height: 200px;
+    z-index: 1;
 }
 
 .img-container p {
     margin: 0;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    height: 30px;
+    width: 89%;
+    z-index: 5;
+    position: relative;
+    bottom: 60px;
+    left: 0px;
+    padding: 10px 22.5px 6px 22px;
+}
+
+.text-box {
+    padding: 5px;
 }
